C++II/.metadata/.plugins/org.eclipse.cdt.ui/9-14CharArrays.build.log
14:09:33 **** Incremental Build of configuration Debug for project 9-14CharArrays ****
make all 
Building file: ../src/9-14CharArrays.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/9-14CharArrays.d" -MT"src/9-14CharArrays.o" -o "src/9-14CharArrays.o" "../src/9-14CharArrays.cpp"
../src/9-14CharArrays.cpp:12:20: warning: extra tokens at end of #include directive [enabled by default]
 #include <string.h>; //needed to work the strcmp function to compare arrays
                    ^
../src/9-14CharArrays.cpp: In function ‘int main()’:
../src/9-14CharArrays.cpp:51:28: error: ‘_strcmpi’ was not declared in this scope
  if (_strcmpi (Name1, Name2) < 0)  //  _strcmpi says treat upper and lower case letters the same
                            ^
make: *** [src/9-14CharArrays.o] Error 1

14:09:33 Build Finished (took 372ms)

